--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2024"
 
 [dependencies]
 rltk = {version = "0.8.0" }
-getrandom = {version = "0.2", features = ["js"] }
+specs = "0.20.0"
+specs-derive = "0.4.1"
 
